# MARL

./: .gitignore  HANDOFF.md  PRESENTATION.md  REPORT.md  agent.py  compare.py  env.py  exploration.py  grid_output_193123.txt  grid_output_193155.txt  hallway_env.py  lbf_env.py  long_run.py  plot_results.py  plot_smax.py  plot_smax_corr_evolution.py  plot_smax_corr_matrix.py  pyproject.toml  report.tex  run_cluster.sbatch  run_cluster_smoke.sbatch  run_grid.py  run_smax.sbatch  run_smax_diag.sbatch  run_smax_grid.py  run_smax_probe.sbatch  run_smax_smoke.sbatch  submit_grid.sh  train.py
cluster_logs/: slurm_194397.out  smax_195140.out  smax_195173.out  smax_195820.out  smax_201193.out  smax_diag_195749.err  smax_diag_195749.out  smax_diag_195811.err  smax_diag_195811.out  smax_diag_201192.err  smax_diag_201192.out  smax_probe_195129.err  smax_probe_195129.out  smax_smoke_195130.err  smax_smoke_195130.out  smax_smoke_195136.err  smax_smoke_195136.out  smoke_194384.err  smoke_194384.out  smoke_194385.err  smoke_194385.out  smoke_194392.err  smoke_194392.out  smoke_194393.out  smoke_194395.out  smoke_194396.out
local_test_results/: lbf_qmix_correlated_obs_s0.npz  lbf_qmix_correlated_obs_s1.npz  lbf_qmix_correlated_q_values_s0.npz  lbf_qmix_correlated_q_values_s1.npz  lbf_qmix_independent_na_s0.npz  lbf_qmix_independent_na_s1.npz  lbf_vdn_correlated_obs_s0.npz  lbf_vdn_correlated_obs_s1.npz  lbf_vdn_correlated_q_values_s0.npz  lbf_vdn_correlated_q_values_s1.npz  lbf_vdn_independent_na_s0.npz  lbf_vdn_independent_na_s1.npz  switches_qmix_correlated_obs_s0.npz  (+11 more)
smax/: run.py  (+6 more)
(+157 files in other folders)
