[project]
name = "rl-hw"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
     "lbforaging>=2.0.0",
     "matplotlib>=3.10.9",
     "numpy>=2.4.6",
     "scipy>=1.17.1",
     "torch==2.4.1",
     "nvidia-cudnn-cu12",
     "nvidia-nccl-cu12",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
